<resources>
    <string name="app_name">ATMConsultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atendimento@atmconsultoria.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_gallery">Serviços</string>
    <string name="menu_slideshow">Clientes</string>
    <string name="menu_email">E-mail</string>
    <string name="menu_phone">fone</string>
    <string name="menu_sair">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="telefone">(71) 98855-0069)</string>
    <string name="email">m.code@outlook.com.br</string>
</resources>