<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_clientes"
            android:title="@string/menu_slideshow" />

        <item android:id="@+id/nav_email"
            android:icon="@drawable/ic_menu_email"
            android:title="@string/menu_email"/>

        <item android:id="@+id/nav_telefone"
            android:icon="@drawable/ic_menu_local_phone"
            android:title="@string/menu_phone"/>

        <item android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_exit_to_app"
            android:title="@string/menu_sair"/>

    </group>

</menu>